--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@ $(document).ready(function(){
 
       <td  style="width: 50%; cellpadding: 20">
 
-        <div >
+        <div style="width:50%">
 
           <a href="./img/screenshots/screenshot_3.png" target="_blank">
-            <img class="img-about" src="./img/screenshots/screenshot_3.png" alt="Screenshot1"></a>
+            <img class="img-about" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
 
           <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-about" style="top: -50px; left: 50px; height:100px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-about" style="top: 280px; left: 250px; height:100px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
 
           <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-about" style="top: 50px; left: -300px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot1"></a>
+            <img class="img-about" style="top: 70px; left: 280px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
 
           <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-about" style="top: 0px; left: 200px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot1"></a>
+            <img class="img-about" style="top: 150px; left: 70px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
 
           <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-about" style="top: 120px; left: -140px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot1"></a>
+            <img class="img-about" style="top: 380px; left: 40px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
 
 
         </div>
