--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@ $(document).ready(function(){
             <img class="img-about" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
 
           <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-about" style="top: 280px; left: 250px; height:100px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-about" style="position:absolute; top: 280px; left: 250px; height:100px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
 
           <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-about" style="top: 70px; left: 280px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-about" style="position:absolute; top: 70px; left: 280px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
 
           <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-about" style="top: 150px; left: 70px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
+            <img class="img-about" style="position:absolute; top: 150px; left: 70px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
 
           <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-about" style="top: 380px; left: 40px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
+            <img class="img-about" style="position:absolute; top: 380px; left: 40px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
 
 
         </div>
