--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ $(document).ready(function(){
     <div>
       <h1>EyesGuard</h1>
       <h2>
-        <span class="color_23">KEEPS</span>
-        <span class="color_21">YOUR VISION</span>
-        <span class="color_11">IN ORDER</span>
+        <span style="color: #6285BC;">KEEPS</span>
+        <span style="color: #C4D2E9;">YOUR VISION</span>
+        <span style="color: #FFFFFF;">IN ORDER</span>
       </h2>
     </div>
   </div>
