--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $(document).ready(function(){
 <!-- Шапка страницы -->
   <div class="style-header">
   <!-- Главное меню -->
-    <div>
+    <div style="min-width:700px;">
       <ul class="main-menu-items" >
         <li><a href="#anchor-home-page" class="font-main-menu">HOME</a></li>
         <li><a href="#anchor-idea-page" class="font-main-menu">THE IDEA</a></li>
@@ -106,10 +106,10 @@ $(document).ready(function(){
 <!--страница THE IDEA  -------------------------------------------->
 <div id = "anchor-idea-page"  style = "position: relative; top: 80px; ">
 </div>
-<div style="background: #C4D2E9; position: relative; top: 180px; height: 600px;  " >
+<div style="background: #C4D2E9; position: relative; top: 180px; height: 650px;  " >
   <br>  <br>
   <p class="idea-header">The idea</p>
-  <br>  <br>   <br>
+  <br>  <br>
 
 
 
