--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ $(document).ready(function(){
 
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
+  <br><br>
   <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 80px">
     <tr >
       <td  class="home-text" style="width: 50%;">
@@ -131,8 +132,7 @@ $(document).ready(function(){
         <br><br>
         Так появилась мысль написать программу , которая будет напоминать о необходимости сделать перерыв. (Поиск такой программы в интернете не принес ожидаемых результатов: либо программа оказывалась платной, либо она меня не устраивала как по функциональности, так и по своему интерфейсу). В результате появилась первая версия программы EyesGuard.
         <br><br>
-        Надеюсь, что и для Вас эта программа бедет полезной. Все свои пожелания, отзывы и предложения можно отправить по почте автору: eyesguard@yandex.ru
-        Также Вы можете присоединиться к проекту.
+        Надеюсь, что и для Вас эта программа бедет полезной. Все свои пожелания, отзывы и предложения можно отправить по почте автору. Также Вы можете присоединиться к проекту.
         </p>
 
 
@@ -158,39 +158,39 @@ $(document).ready(function(){
 <!-- Вторая страница О программе -------------------------------------------->
 <div id = "anchor-about-page"  style = "position: relative; top: 100px; id = "anchor-about-page"">
 </div>
-<div  style="background: #41597D; position: relative; top: 180px; height: 1100px;" >
+<div  style="background: #41597D; position: relative; top: 180px; height: 1400px;" >
   <br>
   <p class="about-header1">О программе EyesGuard</p>
   <p class="about-header2">EyesGuard поможет сохранить зрение в порядке</p>
-  <br><br>
+  <br><br><br><br>
 
 
-  <table cellpadding="20" style="width: 86%; left: 0%; height=100%; align: center; position: relative; top: -100px ">
+  <table cellpadding="20" style="width: 80%; left: 10%; height=100%; align: center; position: relative; top: -100px ">
     <tr>
 
       <td  style="width: 30%;">
 
-        <div style="width:50%">
+        <div >
 
           <a href="./img/screenshots/screenshot_3.png" target="_blank">
-            <img class="img-about" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
+            <img class="img-screenshot1" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
 
           <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 500px; left: 150px; height:80px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-screenshot2" src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
 
           <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 220px; left: 130px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-screenshot3" src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
 
           <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 350px; left: 30px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
+            <img class="img-screenshot4" src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
 
           <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 610px; left: 40px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
+            <img class="img-screenshot5" src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
 
 
         </div>
      </td>
-     <td class="about-text" style="width: 60%;">
+     <td class="about-text" style="width: 70%;">
        <p>Данная программа поможет Вам правильно организовать свою работу на компьютере. Она напомнит о необходимости сделать перерыв и сообщит о начале и конце перерыва. <br><br>
     После запуска программа сворачивается в системный трей. При этом рядом с часами появится иконка в виде глаза. Если глаз голубого цвета, то программа работает, если глаз красный - программа не работает (и сущетвует опасность, что и Ваши глаза могут стать красными ;) ).
       </p>
@@ -289,7 +289,8 @@ $(document).ready(function(){
   <p>В программе были использованы пиктограммы, взятые для некоммерческого использованя с сайтов www.aha-soft.com и www.deleket.com. Спасибо их создателям!
   </p>
 
-  <p>Для пользователей операционной системы Linux: для запуска EyesGuard в Linux можно использовать программу <a style="color: #000000" href="http://winehq.org">WINE</a>. Для этого нужно установить WINE и выполнить команду:    $wine "[путь_к_программе]\EyesGuard.exe"
+  <p>Для пользователей операционной системы Linux: для запуска EyesGuard в Linux можно использовать программу <a style="color: #000000" href="http://winehq.org">WINE</a>. Для этого нужно установить WINE и выполнить команду:  <br>
+      $wine "[путь_к_программе]\EyesGuard.exe"
 
   </p>
  </div>
