--- a/index_en.html
+++ b/index_en.html
@@ -68,6 +68,7 @@
 
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
+  <br><br>
   <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 80px">
     <tr style=" ">
       <td  class="home-text" style="width: 50%; cellpadding: 20;">
@@ -99,7 +100,7 @@
 <!--страница THE IDEA  -------------------------------------------->
 <div id = "anchor-idea-page"  style = "position: relative; top: 80px; ">
 </div>
-<div style="background: #C4D2E9; position: relative; top: 180px; height: 650px;  " >
+<div style="background: #C4D2E9; position: relative; top: 180px; height: 700px;  " >
   <br>  <br>
   <p class="idea-header">The idea of creation</p>
   <br>  <br>
@@ -132,20 +133,20 @@
   <p class="about-header2">EyesGuard helps you to keep vision in order</p>
   <br><br><br><br>
 
-  <table cellpadding="20" style="width: 86%; left: 0%; height=100%; align: center; position: relative; top: -100px ">
+  <table cellpadding="20" style="width: 80%; left: 10%; height=100%; align: center; position: relative; top: -100px ">
     <tr>
       <td  style="width: 30%;">
         <div style="width:50%">
           <a href="./img/screenshots/screenshot_3.png" target="_blank">
-            <img class="img-about" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
+            <img class="img-screenshot1" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
           <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 500px; left: 150px; height:80px " src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-screenshot2" src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
           <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 220px; left: 130px; height:100px " src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-screenshot3" src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
           <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 350px; left: 30px; height:120px; width:200px " src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
+            <img class="img-screenshot4" src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
           <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-about" style="position:absolute; top: 610px; left: 40px; height:100px; width:200px " src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
+            <img class="img-screenshot5" src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
         </div>
      </td>
      <td class="about-text" style="width: 60%;">
@@ -229,7 +230,7 @@
   <br>  <br>
   <p class="download-header1">Download EyesGuard</p>
   <br>
-  <div class="download-text" style="position: relative; left: 8%; width:70%; height:100%; word-wrap: break-word">
+  <div class="download-text" style="position: relative; left: 8%; width:70%; height:100%; ">
   <p>EyesGuard is distributed under the GNU General Public License. The official publication of the license GNU GPL you can find here:
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
@@ -245,8 +246,9 @@
   </p>
 
   <p>For Linux users: if you want ro run EyesGuard under Linux you should use
-    <a style="color: #000000" href="http://winehq.org">WINE</a>. After wine is installed run this command: <br>
-  $wine "[path_to_file]\EyesGuard.exe"
+    <a style="color: #000000" href="http://winehq.org">WINE</a>.
+  After wine is installed run this command: <br>
+  $wine "[path_to_file]\EyesGuard.exe
   </p>
  </div>
 </div>
