--- a/index.html
+++ b/index.html
@@ -55,18 +55,21 @@ $(document).ready(function(){
     </div>
 
   <!-- Центральная надпись -->
-  <div class="style-banner">
-    <div >
-      <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
-    </div>
 
-    <div>
-      <h1>EyesGuard</h1>
-      <h2>
-        <span style="color: #A0B4D2;">ЗАБОТИТСЯ</span>
-        <span style="color: #C4D2E9;">О ВАШЕМ</span>
-        <span style="color: #FFFFFF;">ЗРЕНИИ</span>
-      </h2>
+  <div style="text-align: center">
+    <div class="style-banner">
+      <div >
+        <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
+      </div>
+
+      <div>
+        <h1>EyesGuard</h1>
+        <h2>
+          <span style="color: #A0B4D2;">ЗАБОТИТСЯ</span>
+          <span style="color: #C4D2E9;">О ВАШЕМ</span>
+          <span style="color: #FFFFFF;">ЗРЕНИИ</span>
+        </h2>
+      </div>
     </div>
   </div>
     <!-- Белая полоска   -->
