--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
 
   <!-- Центральная надпись -->
 
-  <div style="text-align: center">
+  <div>
     <div class="style-banner">
       <div >
         <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
