--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <title>EyesGuard</title>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./img/eg_favicon.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
 
   <link href="./css/styles.css" rel="stylesheet">
 
