--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(document).ready(function(){
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
   <br><br>
-  <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 80px">
+  <table cellpadding="20" style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr >
       <td  class="home-text" style="width: 50%;">
         <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам!!! </p>
@@ -93,7 +93,7 @@ $(document).ready(function(){
         <div style="text-align: center"><img class="img-man-and-pc" src="./img/man_and_pc.jpg" alt="Tired man in fron of PC">
         </div>
       </td>
-      <td  class="home-text"  style="width: 50%; cellpadding: 20">
+      <td  class="home-text"  style="width: 50%;">
 
         <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.jpg" alt="Tired girl in fron of PC">
         </div>
@@ -124,9 +124,9 @@ $(document).ready(function(){
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 5%; height=100%; align: center; position: relative; top: -130px; ">
+  <table cellpadding="20" style="width: 86%; left: 5%; position: relative; top: -130px; ">
     <tr>
-      <td style="width: 60%; cellpadding: 10;">
+      <td style="width: 60%;">
         <br>    <br>
         <p class="idea-text">Поводом к написанию программы послужило то, что мне как студенту приходится много времени проводить за компьютером, выполняя лабораторные работы, рефераты, курсовые проекты и др. Однако, понимая необходимость этого, я помнил о том, что это вредно для моего здоровья: глаза уставали, я просиживал за ПК практически без движения по несколько часов подряд. Но, тем не менее, оторваться от монитора было крайне сложно. Результат - красные глаза, ухудшение зрения, плохое настроение. А ведь сделать перерыв очень полезно. Думая о проблеме, не смотря на экран, часто находишь верные решения и иногда гораздо быстрее.
 
@@ -141,7 +141,7 @@ $(document).ready(function(){
 
 
       </td>
-      <td  class="recom-text" style="width: 40%; cellpadding: 20">
+      <td  class="recom-text" style="width: 40%;">
 <br>    <br>
 
         <div style="text-align: center"><img class="student-and-pc" src="./img/student_and_pc.jpg" alt="Healthy eyes">
@@ -158,7 +158,7 @@ $(document).ready(function(){
 
 
 <!-- Вторая страница О программе -------------------------------------------->
-<div id = "anchor-about-page"  style = "position: relative; top: 100px; id = "anchor-about-page"">
+<div id = "anchor-about-page"  style = "position: relative; top: 100px;">
 </div>
 <div  style="background: #41597D; position: relative; top: 180px; height: 1400px;" >
   <br>
@@ -167,7 +167,7 @@ $(document).ready(function(){
   <br><br><br><br>
 
 
-  <table cellpadding="20" style="width: 80%; left: 10%; height=100%; align: center; position: relative; top: -100px ">
+  <table cellpadding="20" style="width: 80%; left: 10%; position: relative; top: -100px ">
     <tr>
 
       <td  style="width: 30%;">
@@ -234,10 +234,10 @@ $(document).ready(function(){
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 6%; height=100%; align: center; position: relative; top: -130px; ">
+  <table cellpadding="20" style="width: 86%; left: 6%; position: relative; top: -130px; ">
     <tr>
 
-      <td  class="recom-text" style="width: 50%; cellpadding: 20">
+      <td  class="recom-text" style="width: 50%;">
 
         <p>Рекомендации офтальмолога по организации работы на компьютере следующие. Непрерывное время работы не должно превышать 45 минут, лучше если оно будет 30 минут или менее. Для детей не более 15 мин. Продолжительность перерыва от 5 до 15 мин в зависимости от длительности непрерывной работы.  Однако Вы можете изменять настройки по своему усмотрению.
 
@@ -254,7 +254,7 @@ $(document).ready(function(){
      </td>
 
 
-     <td style="width: 50%; cellpadding: 20;">
+     <td style="width: 50%;">
        <div style="text-align: center"><img class="img-healthy-eyes" src="./img/healthy_eyes.jpg" alt="Healthy eyes">
        </div>
 
