--- a/index_en.html
+++ b/index_en.html
@@ -69,9 +69,9 @@
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
   <br><br>
-  <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 80px">
+  <table cellpadding="20" style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr style=" ">
-      <td  class="home-text" style="width: 50%; cellpadding: 20;">
+      <td  class="home-text" style="width: 50%;">
         <br> <br>
         <p>If you work a lot on a computer and want to keep your vision in order or to keep vision of your children and relatives, who are crazy of PC, this program will be very useful for you!</p>
         <br>
@@ -85,7 +85,7 @@
         <div style="text-align: center"><img class="img-man-and-pc" src="./img/man_and_pc.jpg" alt="Tired man in fron of PC">
         </div>
       </td>
-      <td  class="home-text"  style="width: 50%; cellpadding: 20">
+      <td  class="home-text"  style="width: 50%;">
         <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.jpg" alt="Tired girl in fron of PC">
         </div>
         <br> <br> <br>
@@ -104,16 +104,16 @@
   <br>  <br>
   <p class="idea-header">The idea of creation</p>
   <br>  <br>
-  <table cellpadding="20" style="width: 86%; left: 5%; height=100%; align: center; position: relative; top: -130px; ">
+  <table cellpadding="20" style="width: 86%; left: 5%; position: relative; top: -130px; ">
     <tr>
-      <td style="width: 50%; cellpadding: 10;">
+      <td style="width: 50%;">
         <br> <br>
         <p class="idea-text">The reason for writing the program was the fact that I had to spend a lot of time in front the monitor (CRT, not LCD!) when I was a student. I had to do many laboratory works, essays, course projects, etc. However, understanding the need for this, I remembered that it was harmful to my health: my eyes grew tired and red, I used to work on the PC for several hours almost without any breaks . But, nevertheless, it was extremely difficult to turn away from the screen. The result is red eyes, blurred vision, bad mood and vision degradation. But it was very useful to take a break. Thinking about the problem, despite the screen, you often helps to find right solutions and sometimes much more faster.
         <br><br>
         So this way appeared an idea to write a program that would remind meabout  the need to take a break. (The search for such a program in the Internet did not bring the expected results: either the program turned out to be paid, or it did not suit me in the functionality or ist interface).
         </p>
       </td>
-      <td  class="recom-text" style="width: 50%; cellpadding: 20">
+      <td  class="recom-text" style="width: 50%;">
         <br> <br>
         <div style="text-align: center"><img class="student-and-pc" src="./img/student_and_pc.jpg" alt="Healthy eyes">
         </div>
@@ -125,7 +125,7 @@
 
 
 <!-- Вторая страница О программе -------------------------------------------->
-<div id = "anchor-about-page"  style = "position: relative; top: 100px; id = "anchor-about-page"">
+<div id = "anchor-about-page"  style = "position: relative; top: 100px;">
 </div>
 <div  style="background: #41597D; position: relative; top: 180px; height: 1100px;" >
   <br>
@@ -133,7 +133,7 @@
   <p class="about-header2">EyesGuard helps you to keep vision in order</p>
   <br><br><br><br>
 
-  <table cellpadding="20" style="width: 80%; left: 10%; height=100%; align: center; position: relative; top: -100px ">
+  <table cellpadding="20" style="width: 80%; left: 10%; position: relative; top: -100px ">
     <tr>
       <td  style="width: 30%;">
         <div style="width:50%">
@@ -193,10 +193,10 @@
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 6%; height=100%; align: center; position: relative; top: -130px; ">
+  <table cellpadding="20" style="width: 86%; left: 6%; position: relative; top: -130px; ">
     <tr>
 
-      <td  class="recom-text" style="width: 50%; cellpadding: 20">
+      <td  class="recom-text" style="width: 50%;">
 
         <p>The time of continuous work on a computer should not exceed 45 minutes. Optimal working time is 30 minutes or less. For children that time should not exceed 15 minutes. Break duration should be from 5 to 15 minutes, depending on the working time. However you can change this settings as you want.
         </p>
@@ -209,7 +209,7 @@
      </td>
 
 
-     <td style="width: 50%; cellpadding: 20;">
+     <td style="width: 50%;">
        <div style="text-align: center"><img class="img-healthy-eyes" src="./img/healthy_eyes.jpg" alt="Healthy eyes">
        </div>
 
