--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(document).ready(function(){
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
   <br><br>
-  <table cellpadding="20" style="width: 86%; left: 7%; position: relative; top: 80px">
+  <table  style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr >
       <td  class="home-text" style="width: 50%;">
         <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам!!! </p>
@@ -124,7 +124,7 @@ $(document).ready(function(){
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 5%; position: relative; top: -130px; ">
+  <table  style="width: 86%; left: 5%; position: relative; top: -130px; ">
     <tr>
       <td style="width: 60%;">
         <br>    <br>
@@ -167,7 +167,7 @@ $(document).ready(function(){
   <br><br><br><br>
 
 
-  <table cellpadding="20" style="width: 80%; left: 10%; position: relative; top: -100px ">
+  <table  style="width: 80%; left: 10%; position: relative; top: -100px ">
     <tr>
 
       <td  style="width: 30%;">
@@ -234,7 +234,7 @@ $(document).ready(function(){
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 6%; position: relative; top: -130px; ">
+  <table  style="width: 86%; left: 6%; position: relative; top: -130px; ">
     <tr>
 
       <td  class="recom-text" style="width: 50%;">
@@ -257,12 +257,12 @@ $(document).ready(function(){
      <td style="width: 50%;">
        <div style="text-align: center"><img class="img-healthy-eyes" src="./img/healthy_eyes.jpg" alt="Healthy eyes">
        </div>
-
+  <br>    <br>
 
 
      </td>
     </tr>
-    <br>    <br>
+
   </table>
 </div>
 
