--- a/index_en.html
+++ b/index_en.html
@@ -10,7 +10,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <script type="text/javascript">
+  <script>
   $(document).ready(function(){
       $('a[href^="#"], *[data-href^="#"]').on('click', function(e){
           e.preventDefault();
@@ -69,7 +69,7 @@
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
   <br><br>
-  <table cellpadding="20" style="width: 86%; left: 7%; position: relative; top: 80px">
+  <table  style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr style=" ">
       <td  class="home-text" style="width: 50%;">
         <br> <br>
@@ -104,7 +104,7 @@
   <br>  <br>
   <p class="idea-header">The idea of creation</p>
   <br>  <br>
-  <table cellpadding="20" style="width: 86%; left: 5%; position: relative; top: -130px; ">
+  <table  style="width: 86%; left: 5%; position: relative; top: -130px; ">
     <tr>
       <td style="width: 50%;">
         <br> <br>
@@ -133,7 +133,7 @@
   <p class="about-header2">EyesGuard helps you to keep vision in order</p>
   <br><br><br><br>
 
-  <table cellpadding="20" style="width: 80%; left: 10%; position: relative; top: -100px ">
+  <table  style="width: 80%; left: 10%; position: relative; top: -100px ">
     <tr>
       <td  style="width: 30%;">
         <div style="width:50%">
@@ -193,7 +193,7 @@
 
 
 
-  <table cellpadding="20" style="width: 86%; left: 6%; position: relative; top: -130px; ">
+  <table  style="width: 86%; left: 6%; position: relative; top: -130px; ">
     <tr>
 
       <td  class="recom-text" style="width: 50%;">
