--- a/index_en.html
+++ b/index_en.html
@@ -4,8 +4,11 @@
 
   <title>EyesGuard</title>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
+  <meta name="author" content="Vorobyov Dmitry">
+  <meta name="description" content="eyesguard will help you to keep your vision">
+  <meta name="keywords" content="eyesguard, how to keep vision, working on computer, break, work, remind to do a break, eyes, tiredness, vision">
 
+  <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -25,7 +28,6 @@
  </head>
 
 <body class = "style-body">
-
 
 <!-- Шапка страницы -->
   <div class="style-header">
@@ -59,12 +61,12 @@
           <span style="color: #FFFFFF;">VISION</span>
         </h2>
       </div>
-  </div>
+   </div>
 
     <!-- Белая полоска   -->
     <div class="class-white-bar">
     </div>
-</div>
+ </div>
 
 <!-- страница HOME -->
 <div id = "anchor-home-page" style="word-wrap:break-word">
