--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
   <title>EyesGuard</title>
   <meta charset="utf-8" />
+  <meta name="author" content="Воробьев Дмитрий">
+  <meta name="description" content="eyesguard - программа для тех, кто хочет сохранить зрение, работая на компьютере.">
+  <meta name="keywords" content="eyesguard, как сохранить зрение, работая на компьютере, перерыв, напоминание, глаза, усталость, зрение">
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
-
   <link href="./css/styles.css" rel="stylesheet">
 
   <!-- <meta name ="viewport" contetnt="width=device-width, initial-scale=1"> -->
