--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ $(document).ready(function(){
 
 
 
-
+<meta name="yandex-verification" content="0278980ad597d779" />
 
  </head>
 
@@ -130,7 +130,7 @@ $(document).ready(function(){
     <tr>
       <td style="width: 60%;">
         <br>    <br>
-        <p class="idea-text">Поводом к написанию программы послужило то, что мне как студенту приходится много времени проводить за компьютером, выполняя лабораторные работы, рефераты, курсовые проекты и др. Однако, понимая необходимость этого, я помнил о том, что это вредно для моего здоровья: глаза уставали, я просиживал за ПК практически без движения по несколько часов подряд. Но, тем не менее, оторваться от монитора было крайне сложно. Результат - красные глаза, ухудшение зрения, плохое настроение. А ведь сделать перерыв очень полезно. Думая о проблеме, не смотря на экран, часто находишь верные решения и иногда гораздо быстрее.
+        <p class="idea-text">Поводом к написанию программы послужило то, что мне как студенту приходится много времени проводить за компьютером, выполняя лабораторные работы, рефераты, курсовые проекты и др. Однако, понимая необходимость этого, я помнил о том, что это вредно для моего здоровья: глаза уставали, я просиживал за ПК практически без движения по несколько часов подряд. Но, тем не менее, оторваться от монитора было крайне сложно. Результат - красные глаза, ухудшение зрения, плохое настроение. А ведь сделать перерыв очень полезно. Думая о проблеме не смотря на экран, часто находишь верные решения и иногда гораздо быстрее.
 
 
         <br><br>
